--- a/tokenizers/pyproject.toml
+++ b/tokenizers/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Dominux <kir.gimranov@gmail.com>"]
 readme = "README.md"
+packages = [{include = "tokenizers"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
