--- a/planimetrics_tasks_generator/pyproject.toml
+++ b/planimetrics_tasks_generator/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.10"
 torch = "^1.13.1"
 torchvision = "^0.14.1"
 torchaudio = "^0.13.1"
+matplotlib = "^3.7.1"
 
 
 [tool.poetry.group.dev.dependencies]
